<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AtividadeCalculoIUC">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/RadioGroupCilindrada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewCilindrada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textViewCilindrada" />

            <RadioButton
                android:id="@+id/radioButtonCilindrada1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radioButtonCilindrada1"
                tools:text="@string/radioButtonCilindrada1" />

            <RadioButton
                android:id="@+id/radioButtonCilindrada2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radioButtonCilindrada2"
                tools:text="@string/radioButtonCilindrada2" />

            <RadioButton
                android:id="@+id/radioButtonCilindrada3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radioButtonCilindrada3"
                tools:text="@string/radioButtonCilindrada3" />

            <RadioButton
                android:id="@+id/radioButtonCilindrada4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radioButtonCilindrada4"
                tools:text="@string/radioButtonCilindrada4" />

        </RadioGroup>

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <RadioGroup
            android:id="@+id/RadioGroupCO2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewCO2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textViewCO2" />

            <RadioButton
                android:id="@+id/radioButtonCO21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radioButtonCO21"
                tools:text="@string/radioButtonCO21" />

            <RadioButton
                android:id="@+id/radioButtonCO22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radioButtonCO22"
                tools:text="@string/radioButtonCO22" />

            <RadioButton
                android:id="@+id/radioButtonCO23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radioButtonCO23"
                tools:text="@string/radioButtonCO23" />

            <RadioButton
                android:id="@+id/radioButtonCO24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radioButtonCO24"
                tools:text="@string/radioButtonCO24" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonCalcularIUC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="calcularIUC"
            android:text="@string/buttonCalcularIUC" />

        <TextView
            android:id="@+id/textViewResultadoIUC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView" />
    </LinearLayout>

</LinearLayout>